# CORAL

./: .gitignore  OUTPUT_FORMAT.md  README.md  environment.yml  pyproject.toml  tutorial.ipynb  tutorial_step_by_step.ipynb
mutextractor/: alignment_manager.py  cleanup_manager.py  cli.py  multiple_species_mutation_extractor_manager.py  multiple_species_utils.py  mutation_extractor_manager.py  pipeline.py  run_phylip.py  utils.py
scripts/: customizable_align_and_filter.sh  extract_triplets.py
src/coral/: __init__.py  __main__.py  alignment_manager.py  cleanup_manager.py  cli.py  genome_manager.py  multiple_species_mutation_extractor_manager.py  multiple_species_utils.py  mutation_extractor_manager.py  pileup_manager.py  pipeline.py  plot_utils.py  run_phylip.py  utils.py
src/coral.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt
tests/: test_smoke.py
